# kedro-kund-sandbox

./: README.md  pyproject.toml
conf/base/: catalog.yml  globals.yml  parameters.yml
conf/base/parameters/: data_combine.yml  data_feature.yml  data_preprocesing.yml  models.yml
data/01_raw/: db_lending_beh.csv  db_lending_fin.csv  db_pocco.csv
docs/source/: conf.py  index.rst
src/: requirements.txt  setup.py
src/kedro_sandbox_proj/: __init__.py  __main__.py  pipeline_registry.py  settings.py
src/kedro_sandbox_proj/pipelines/data_combine/: README.md  __init__.py  nodes.py  pipeline.py
src/kedro_sandbox_proj/pipelines/data_feature/: README.md  __init__.py  nodes.py  pipeline.py
src/kedro_sandbox_proj/pipelines/data_preprocesing/: README.md  __init__.py  nodes.py  pipeline.py
src/kedro_sandbox_proj/pipelines/data_split/: nodes.py  pipeline.py
src/kedro_sandbox_proj/pipelines/models/: README.md  __init__.py  nodes.py  pipeline.py
src/tests/: test_run.py
src/tests/pipelines/data_combine/: test_pipeline.py
src/tests/pipelines/data_feature/: test_pipeline.py
src/tests/pipelines/data_preprocesing/: test_pipeline.py
src/tests/pipelines/data_split/: test_pipeline.py
src/tests/pipelines/models/: test_pipeline.py
